2011-04-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Update to account for movement of .cfg files.

2011-03-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* classic_api/triple_period/Makefile: 
	include $(PROJECT_ROOT)/make/leaf.cfg
	(Consistency with other Makefiles).

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Fix typo.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog, Makefile: Merge programs from examples.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Merge programs from examples.
	* posix_api/ChangeLog, posix_api/Makefile,
	posix_api/psx_sched_report/Makefile,
	posix_api/psx_sched_report/README, posix_api/psx_sched_report/test.c: New files.
