@@ -1,3 +1,7 @@
+2011-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* testmacros.h: Eliminate use of obsolete rtems_clock_get().
+
 2011-04-01	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile: Update to account for movement of .cfg files.
